objects/Organic_Analysis__c.object
<CustomObject>
    <fields>
        <fullName>Business_Days_Open__c</fullName>
        <formula>If(IsNull(Closed_Date__c), 

CASE(MOD( DateValue(CreatedDate) - DATE(1985,6,24),7), 0 , 
CASE( MOD( Today() - DateValue(CreatedDate) ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 1 , 
CASE( MOD( Today() - DateValue(CreatedDate) ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 2 , 
CASE( MOD( Today() - DateValue(CreatedDate) ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 3 , 
CASE( MOD( Today() - DateValue(CreatedDate) ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 4 , 
CASE( MOD( Today() - DateValue(CreatedDate) ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 5 , 
CASE( MOD( Today() - DateValue(CreatedDate) ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 6 , 
CASE( MOD( Today() - DateValue(CreatedDate) ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 999) 
+ (FLOOR(( Today() - DateValue(CreatedDate) )/7)*5-1), 

CASE(MOD( DateValue(CreatedDate) - DATE(1985,6,24),7), 0 , 
CASE( MOD( DateValue(Closed_Date__c) - DateValue(CreatedDate) ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 1 , 
CASE( MOD( DateValue(Closed_Date__c) - DateValue(CreatedDate) ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 2 , 
CASE( MOD( DateValue(Closed_Date__c) - DateValue(CreatedDate) ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 3 , 
CASE( MOD( DateValue(Closed_Date__c) - DateValue(CreatedDate) ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 4 , 
CASE( MOD( DateValue(Closed_Date__c) - DateValue(CreatedDate) ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 5 , 
CASE( MOD( DateValue(Closed_Date__c) - DateValue(CreatedDate) ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 6 , 
CASE( MOD( DateValue(Closed_Date__c) - DateValue(CreatedDate) ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 999) 
+ (FLOOR(( DateValue(Closed_Date__c) - DateValue(CreatedDate) )/7)*5-1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Days Open</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Description__c</fullName>
        <description>OR 1.0 accounts field</description>
        <label>Business Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Business_Name_Inputted_Into_BLocal__c</fullName>
        <label>B - Business Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Name_Inputted_Into_Hotfrog_ca__c</fullName>
        <label>Business Name Inputted Into Hotfrog.ca</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Name_Inputted_Into_Ibegin__c</fullName>
        <label>Business Name Inputted Into Ibegin</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Name_Inputted_Into_Weblocal__c</fullName>
        <label>Business Name Inputted Into Weblocal</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Name_Inputted_Into_Yellowpages__c</fullName>
        <label>Business Name Inputted Into Yellowpages.</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Name_Inputted_into_GLocal__c</fullName>
        <label>G - Business Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Name_Inputted_into_Ourbis_ca__c</fullName>
        <label>Business Name Inputted into Ourbis.ca</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPP_Account__c</fullName>
        <formula>Account_Name__r.CPP_Account__c</formula>
        <label>CPP Account?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Date_Time__c</fullName>
        <formula>Account_Name__r.CSC_Date_Time__c</formula>
        <label>CSC Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CS_Feedback_For_SEO_Mops__c</fullName>
        <label>CS Feedback For SEO Mops</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Satisfactory</fullName>
                    <default>true</default>
                    <label>Satisfactory</label>
                </value>
                <value>
                    <fullName>Unsatisfactory</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Calls_Last_30_Days__c</fullName>
        <label>Calls Last 30 Days</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cannot_Complete_Reason__c</fullName>
        <description>PIN Action Needed</description>
        <label>Cannot Complete Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Cancelled Organic Product</fullName>
                </value>
                <value>
                    <fullName>Client Cancelling</fullName>
                </value>
                <value>
                    <fullName>Client does not have access to account</fullName>
                </value>
                <value>
                    <fullName>Client has another SEO company</fullName>
                </value>
                <value>
                    <fullName>Client Refuses Claim</fullName>
                </value>
                <value>
                    <fullName>Creating New Listing</fullName>
                </value>
                <value>
                    <fullName>Duplicate case</fullName>
                </value>
                <value>
                    <fullName>Max Attempts</fullName>
                </value>
                <value>
                    <fullName>No pin</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Difficulty__c</fullName>
        <inlineHelpText>1-5 scale for easy to hard</inlineHelpText>
        <label>Case Difficulty</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Owner_Role__c</fullName>
        <formula>Owner:User.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Owner Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Rating__c</fullName>
        <inlineHelpText>1 bad, 3 is good</inlineHelpText>
        <label>Case Writing Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Reason__c</fullName>
        <label>Case Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Index</fullName>
                </value>
                <value>
                    <fullName>Guarantee</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Free Time Eligible</fullName>
                </value>
                <value>
                    <fullName>RAB Teardown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_URL__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>Organic_Analyses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Categories_Inputted_Into_Hotfrog_ca__c</fullName>
        <label>Categories Inputted Into Hotfrog.ca</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Categories_Inputted_Into_Ibegin__c</fullName>
        <label>Categories Inputted Into Ibegin</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Categories_Inputted_Into_Ourbis_ca__c</fullName>
        <label>Categories Inputted Into Ourbis.ca</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Categories_Inputted_Into_Yellowpages_ca__c</fullName>
        <label>Categories Inputted Into Yellowpages.ca</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Categories_Inputted_into_BLocal__c</fullName>
        <label>Business Category</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Categories_Inputted_into_GLocal__c</fullName>
        <label>Category 1 Term</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Categories_Inputted_into_Weblocal__c</fullName>
        <label>Categories Inputted into Weblocal</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Category_10_Inputted_into_GLocal__c</fullName>
        <label>Category 10 Term</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Category_2_Inputted_into_GLocal__c</fullName>
        <label>Category 2 Term</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Category_3_Inputted_into_GLocal__c</fullName>
        <label>Category 3 Term</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Category_Placement__c</fullName>
        <label>Category Placement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Correct Services Selected</fullName>
                </value>
                <value>
                    <fullName>Errors Found/Fixed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Channel_Type__c</fullName>
        <label>Channel Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Local</fullName>
                </value>
                <value>
                    <fullName>National</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Checked_for_duplicate_listings_Google__c</fullName>
        <label>Checked for duplicate listings Google</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Checked_for_duplicate_listings__c</fullName>
        <label>Checked for duplicate listings</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Circuit_Breaker_Tasks__c</fullName>
        <formula>IF(
ISPICKVAL(Indexing_on_Bing__c,"No"),
"Resubmit URL To Bing Webmaster Tools, re verify website if necessary. Set Max Crawl Rate. Note any Bing dashboard errors in this case.","")+
IF(
ISPICKVAL(Indexing_on_Bing__c,"No"),
"Resubmit URL To Google Webmaster Tools, re verify website if necessary. Fetch as Google Bot and resubmit. Note any Google dashboard errors in this case.","")+
IF(
ISPICKVAL(Is_sitemap_correct__c,"No"),
"Re-create sitemap.html, site-map.xml, geo-sitemap.xml &amp; kml sitemaps. Add sitemap files to Site Resources base files. Re-publish site and resubmit URL To Google Webmaster Tools. Fetch as Google Bot and resubmit. Note any Google dashboard errors in this case. Resubmit URL To Bing Webmaster Tools and set max crawl rate. Note any Bing dashboard errors in this case.","na")+
IF(
ISPICKVAL(Is_information_entered_properly_in_YL__c,"No"),
"Navigate to ASW Account Setup &gt; Organic Info &gt; Organic Domain and select correct domain. Navigate to ASW Account Setup &gt; Basic Setup &gt; Web address for Distribution, Make sure this is the correct domain. If not, update it, navigate to 'Complete setup' tab and re-push to distributions.","")+
IF(
ISPICKVAL(Robots_txt_correct__c,"No"),
"Navigate to Page Designer, Site Resources. Create a new copy of website. Navigate to Site Settings. Verify Robots.txt dropdown has 'Include' selected. If 'Include' is not selected, select it and add into the text field: Sitemap: http://www.domain.net/site-map.xml (change the domain name). Apply changes and publish.","")+
IF(
ISPICKVAL(Submit_for_bookmarking__c,"Yes"),
"Create an 'Additional Citations' Case Object case. Select 'Assign using active assignment rules'","")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Circuit Breaker Tasks</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Citation_Build_Date__c</fullName>
        <label>Citation Build Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>City from Sugar to for the client's address</description>
        <label>City</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Claimed_Listing_new__c</fullName>
        <label>Claimed Listing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Google</fullName>
                </value>
                <value>
                    <fullName>Bing</fullName>
                </value>
                <value>
                    <fullName>Google, Bing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cleaned_Out_Date__c</fullName>
        <description>Date listing was cleaned out</description>
        <label>Cleaned Out Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Client_Channel__c</fullName>
        <formula>IMS_Rep__r.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IMS Rep Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Email_Address__c</fullName>
        <label>Client's Primary Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Client_ID__c</fullName>
        <label>Client ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Phone_Number__c</fullName>
        <label>Client Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Client_Requested_Notes__c</fullName>
        <label>Client Requested Notes</label>
        <length>15000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Client_Requested_Other__c</fullName>
        <inlineHelpText>Must Fill Out if you selected Other for Client Requested</inlineHelpText>
        <label>Client Requested - Other</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Client_Requested_Tasks__c</fullName>
        <label>Client Requested Tasks</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Add Cover Image Photo</fullName>
                </value>
                <value>
                    <fullName>Add Logo</fullName>
                </value>
                <value>
                    <fullName>Add Profile Photo</fullName>
                </value>
                <value>
                    <fullName>Citation Opt IN/OUT</fullName>
                </value>
                <value>
                    <fullName>Citation Teardown</fullName>
                </value>
                <value>
                    <fullName>Google Clean-out &amp; Tear-down</fullName>
                </value>
                <value>
                    <fullName>Google Listing Ownership Transfer</fullName>
                </value>
                <value>
                    <fullName>Meta Updates</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Sync Google Plus</fullName>
                </value>
                <value>
                    <fullName>Update Google Listing</fullName>
                </value>
                <value>
                    <fullName>Add Client as Co-Owner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_Services_Dept_Name__c</fullName>
        <formula>if(
 Account_Name__r.IMS_Rep__r.Full_Name__c = "Lighthouse Medical",
"Lighthouse Medical Support",
if(
 Account_Name__r.IMS_Rep__r.Full_Name__c = "Lighthouse Customer Care",
"Lighthouse Customer Care",
if(
or(
 ispickval( Account_Name__r.Client_Type__c , "Core"),
 ispickval( Account_Name__r.Client_Type__c , "National")),
"Customer Care",
if(
ispickval ( Account_Name__r.Channel_Development__c , "Rogers"),
"Outrank by Rogers",
""))))</formula>
        <label>Client Services Dept Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Services_Manager__c</fullName>
        <label>Client Services Manager</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Services_Phone_Number__c</fullName>
        <formula>if(
 Account_Name__r.IMS_Rep__r.Full_Name__c = "Lighthouse Medical",
"888-920-5127",
if(
 Account_Name__r.IMS_Rep__r.Full_Name__c = "Lighthouse Customer Care",
"888-427-5454",
if(
or(
 ispickval( Account_Name__r.Client_Type__c , "Core"),
 ispickval( Account_Name__r.Client_Type__c , "National")),
"877-334-4321",
if(
ispickval ( Account_Name__r.Channel_Development__c , "Rogers"),
"866-269-1710",
""))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Services Phone Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Type__c</fullName>
        <formula>TEXT(Account_Name__r.Client_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_s_Concern_Notes__c</fullName>
        <label>Client's Concern Notes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Client_s_Concerns_Other__c</fullName>
        <inlineHelpText>Must fill out if you selected Other for Client Concerns</inlineHelpText>
        <label>Client's Concerns - Other</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Client_s_Concerns__c</fullName>
        <label>Client's Concerns</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Calls/Leads</fullName>
                </value>
                <value>
                    <fullName>Citation Network Issues</fullName>
                </value>
                <value>
                    <fullName>Keywords</fullName>
                </value>
                <value>
                    <fullName>Not Ranking on Bing</fullName>
                </value>
                <value>
                    <fullName>Not Ranking on Google</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Overall Performance</fullName>
                </value>
                <value>
                    <fullName>Rankings</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_s_Email_Address__c</fullName>
        <label>Client's Email Address</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Close_Case_Reviewed_by_CS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Close Case Reviewed by CS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Closed_Date__c</fullName>
        <label>Closed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Competitive_Analysis__c</fullName>
        <inlineHelpText>Look at citations of competition for opportunities. Navigate to Places page and select More About.</inlineHelpText>
        <label>Competitive Analysis</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Built More Citations</fullName>
                </value>
                <value>
                    <fullName>Did Not Build Citations</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competitive__c</fullName>
        <inlineHelpText>Look at links of the competition for opportunities.</inlineHelpText>
        <label>Competitive Analysis</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Built More Links</fullName>
                </value>
                <value>
                    <fullName>Did Not Build Links</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Conflicting_Page_Intent__c</fullName>
        <inlineHelpText>Are pages conflicting for attention to the same concept? Ex: (home page for dentist, also gen dentist page)</inlineHelpText>
        <label>Conflicting Page Intent?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Date__c</fullName>
        <description>For New PIN Action Needed Case</description>
        <label>Contact Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Contact_Form_YO_Phone__c</fullName>
        <label>Contact Form &amp; YO Phone #</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Errors Found/Fixed</fullName>
                </value>
                <value>
                    <fullName>No Errors Found</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contacted_Google_Support_Need_Follow_Up__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contacted Google Support-Need Follow Up</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contacted_Yext_Support_Follow_Up_Neede__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contacted Yext Support-Need Follow Up</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Content_Be_Improved__c</fullName>
        <inlineHelpText>Can the quality of the content on the website be improved?</inlineHelpText>
        <label>Content Be Improved?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Content_Written_On_Site__c</fullName>
        <label>Content Written &amp; On Site</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Accepted</fullName>
                </value>
                <value>
                    <fullName>Customer Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Corp_Acct_Id__c</fullName>
        <formula>IF(NOT(ISBLANK(Account_Name__r.Relationship_ID__c)), Account_Name__r.Relationship_ID__c, 
  IF(NOT(ISBLANK(Account_Name__r.Corp_Acct_in_YL_Parent_Account__c)), Account_Name__r.Corp_Acct_in_YL_Parent_Account__c, NULL)
)</formula>
        <label>Corp Acct Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Correct_Address_Used__c</fullName>
        <label>Correct Address Used?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Correct_Domain_Used__c</fullName>
        <label>Correct Domain Used?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No - Fixed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Correct_Domain_in_YL__c</fullName>
        <label>Correct Domain in YL?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No - Need to Fix</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Correct_KWs_in_YL__c</fullName>
        <label>Correct KWs in YL?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No - Need to add</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Correct_Phone__c</fullName>
        <label>Correct Phone Number?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes - Unpaid Number</fullName>
                </value>
                <value>
                    <fullName>No - Fixed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <formula>Account_Name__r.BillingCountry</formula>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Email_PW__c</fullName>
        <label>Created Email PW</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Created_Email_UN__c</fullName>
        <label>Created Email UN</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Care_Email_Address__c</fullName>
        <formula>if(
 Account_Name__r.IMS_Rep__r.Full_Name__c = "Lighthouse Medical",
"medicalsupport@lighthousepmg.com",
if(
 Account_Name__r.IMS_Rep__r.Full_Name__c = "Lighthouse Customer Care",
"customercare@lighthousepmg.com",
if(
or(
 ispickval( Account_Name__r.Client_Type__c , "Core"),
 ispickval( Account_Name__r.Client_Type__c , "National")),
"customercare@yodle.com",
if(
ispickval ( Account_Name__r.Channel_Development__c , "Rogers"),
"pinsupport@service.rogersoutrank.com",
""))))</formula>
        <label>Client Services Email Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Address_Hidden_on_GWL__c</fullName>
        <label>Date Address Hidden on GWL</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Areas_Served_Updated__c</fullName>
        <description>The date that we started using the new areas served method</description>
        <label>Date Areas Served Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_GWL_Inclusion_Email_Sent__c</fullName>
        <label>Date GWL Inclusion Email Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Initial_Error_Check_Complete__c</fullName>
        <label>Date Initial Error Check Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Left_SEO_Mops__c</fullName>
        <label>Date Left SEO Mops</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_MOPS_Tasks_Completed__c</fullName>
        <label>Date MOPS Tasks Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Moved_to_Bing_Rebuild_Needed__c</fullName>
        <label>Date Moved to Bing Rebuild Needed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Moved_to_Google_Account_Rebuild__c</fullName>
        <label>Date Moved to Google Account Rebuild</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Moved_to_Google_Listing_Rebuild__c</fullName>
        <label>Date Moved to Google Listing Rebuild</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Opt_Completed__c</fullName>
        <label>Date Opt Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_PES_Completed_PAN_Case__c</fullName>
        <label>Date PES Completed PAN Case</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Removed_from_Google_Bulk_Account__c</fullName>
        <label>Date Removed from Google Bulk Account</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Shared_Mgmt_Invite_Sent_to_Client__c</fullName>
        <label>Date Shared Mgmt Invite Sent to Client</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Status_Check__c</fullName>
        <label>Date Status Check</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Tasks_Completed__c</fullName>
        <label>Date Tasks Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Web_Dev_Tasks_Completed__c</fullName>
        <label>Date Web Dev Tasks Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Build_QA__c</fullName>
        <label>Date of Build QA</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Last_Contact__c</fullName>
        <label>Date of Last Contact</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Last_Opt__c</fullName>
        <label>Date of Last Opt</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Last_Sync_Task__c</fullName>
        <label>Date of Last Sync Task</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Ownership_Transfer__c</fullName>
        <label>Date of Ownership Transfer</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Day_10__c</fullName>
        <formula>IF( G_Postcard_Request__c &gt; B_Postcard_Request__c ,
 G_Postcard_Request__c  +10,
B_Postcard_Request__c +10)</formula>
        <label>Day 10 Automated Email Schedule</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Day_12_After_Google_Request__c</fullName>
        <formula>G_Postcard_Request__c  + 12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Day 12 Automated Email Schedule</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Day_14_Automated__c</fullName>
        <formula>IF( G_Postcard_Request__c &gt; B_Postcard_Request__c ,
G_Postcard_Request__c +14,
B_Postcard_Request__c +14)</formula>
        <label>Day 14 Automated Email Schedule</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Day_16_After_Google_Request__c</fullName>
        <formula>G_Postcard_Request__c  + 16</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Day 16 Automated Email Schedule</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Day_20_After_Google_Request__c</fullName>
        <formula>G_Postcard_Request__c + 20</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Day 20 Automated Email Schedule</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Day_5_Automated_Email_Schedule__c</fullName>
        <formula>IF( G_Postcard_Request__c &gt; B_Postcard_Request__c ,
G_Postcard_Request__c +5,
B_Postcard_Request__c +5)</formula>
        <label>Day 5 Automated Email Schedule</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Live_on_SEO__c</fullName>
        <label>Days Live on SEO</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>